<resources>
    <string name="app_name">SPANGE</string>

    <!-- Screen Names -->
    <string name="title_activity_realtime_map">RealTimeMap</string>
    <string name="title_activity_route_map">RouteMap</string>
    <string name="title_activity_settings">기기 등록</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>


    <string name="testURL">http://ec2-15-164-218-172.ap-northeast-2.compute.amazonaws.com:8090</string>
    <string name="baseURL">http://172.30.1.7:8090</string>


    <!--Strings for Setting screen-->
    <string name="text_input_device_id">기기 아이디</string>
    <string name="text_input_user_id">사용자 아이디</string>
    <string name="setting_activity_button_ok">OK</string>

    <string name="setting_toast_msg_empty_device_id">device id가 빈칸입니다</string>
    <string name="setting_toast_msg_empty_user_id">사용자 id가 빈칸입니다</string>
    <string name="setting_toast_msg_invalid_device_id">올바르지 않은 기기 번호 입니다</string>
    <string name="setting_toast_msg_max_user_num">최대 사용자 수 초과</string>

    <string name="setting_edit_text_error_msg_device_id_empty">기기 ID를 입력해 주세요</string>
    <string name="setting_edit_text_error_msg_user_id_empty">사용자 ID를 입력해 주세요</string>
    <string name="setting_edit_text_error_msg_device_id_invalid">등록되지 않은 기기입니다. 다시 확인해 주시기 바랍니다.</string>
    <string name="setting_edit_text_error_msg_exceed_max_user">해당 기기에 등록 가능한 최대 사용자 수를 초과하여 등록이 실패했습니다.</string>

    <string name="setting_screen_alert_msg_body_signup_finish">님이 등록을 수락하면 스팡이를 시작하실 수 있습니다</string>


    <!--Strings for SharedPreferences   -->
    <string name="shared_preferences_file_name">SPANGE@SharedPreferences</string>
    <string name="fcm_token_key">SPANGE@fcm_token_key</string>
    <string name="user_id_key">SPANGE@user_id_key</string>
    <string name="device_id_key">SPANGE@device_id_key</string>
    <string name="not_found_invalid_key">SharedPreferences@key_not_found</string>
    <string name="title_activity_maps">Map</string>


    <!--Extra Strings for Push Notification Intent-->
    <string name="push_notification_key_push_notification">push_notification</string>
    <string name="push_notification_key_latitude">latitude</string>
    <string name="push_notification_key_longitude">longitude</string>

    <string name="extra_str_key_user_id">user_id</string>


    <!--Strings for Maps (push notification) screen-->
    <string name="maps_activity_alert_msg_title">위치 데이터 수신 실패</string>
    <string name="maps_activity_alert_msg_body">대상이 실내에 위치하여 데이터를 읽지 못하였습니다. 마지막 위치를 확인하시겠습니까?</string>
    <string name="maps_activity_alert_ok_button_str">최근 위치 확인</string>
    <string name="maps_activity_alert_no_button_str">취소</string>
    <string name="maps_activity_toast_msg_ok">마지막 위치 정보 불러오기</string>
    <string name="maps_activity_toast_msg_cancel">취소</string>

    <!-- Strings for ManagerActivity -->
    <string name="cancel_delete_user">취소</string>

    <!-- Strings for the custom alert dialogs -->
    <string name="alert_dialog_register_device"> 대표 사용자님이 등록을 수락하면 스팡이를 시작하실 수 있습니다.</string>
    <string name="sign_in_sample_text">스팡이123님이 등록을 수락하면 스팡이를 시작하실 수 있습니다</string>
    <string name="delete_user_text">스팡이 사용자 님을 사용자 목록에서 삭제하시겠어요?</string>


    <!-- Login Screen -->
    <string name="prompt_email">이메일 주소</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_username">사용자 이름</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_goBack_login">뒤로가기</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
